Arreglo del /clanadmin penitence clear que aparecia en /clan (usuario)